crates/banshee_format/tests/snapshots/snapshots__group_by_having.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT department, COUNT(*) AS cnt
  FROM employees
GROUP BY department
HAVING COUNT(*) > 5
ORDER BY cnt DESC
