crates/banshee_format/tests/snapshots/snapshots__multiple_statements.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT *
  FROM users

SELECT *
  FROM orders
