crates/banshee_format/tests/snapshots/snapshots__recursive_cte.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
WITH RECURSIVE numbers AS (
  SELECT 1 AS n

    UNION ALL 
  SELECT n+1
    FROM numbers
   WHERE n < 10
)
SELECT *
FROM numbers
