crates/banshee_format/tests/snapshots/snapshots__simple_select_sqlstyle.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT id, name
  FROM users
 WHERE active = true
