crates/banshee_format/tests/snapshots/snapshots__subquery.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
SELECT *
  FROM users
 WHERE id IN ( SELECT user_id FROM orders WHERE total > 100)
