crates/banshee_format/tests/snapshots/snapshots__update_set.snap
---
source: crates/banshee_format/tests/snapshots.rs
expression: formatted
---
UPDATE users
   SET name = 'New Name',
       updated_at = now()
 WHERE id = 1
